--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ async function scanURL(){
 showResult("warning","Scanning...");
 const res=await fetch("/api/scan",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:document.getElementById("urlInput").value})});
 const d=await res.json();
-if(d.malicious>0||d.suspicious>0)showResult("danger","BERBAHAYA");else showResult("safe","Danger");
+if(d.malicious>0||d.suspicious>0)showResult("danger","BERBAHAYA VIRUS NIH");else showResult("safe","AMAN CUY");
 }
 </script>
 </body>
